--- a/app/views/layouts/application.html copy.erb
+++ b/app/views/layouts/application.html copy.erb
@@ -14,7 +14,7 @@
     
     <nav>
     	<ul>
-    		<li><%= link_to "Home", "/" %></li>
+    		<li><%= link_to "Home", "" %></li>
     	</ul>
     </nav>
     
